2012-11-05  Uros Bizjak  <ubizjak@gmail.com>
	    Vladimir Yakovlev  <vladimir.b.yakovlev@intel.com>

	* mode-switching.c (create_pre_exit): Force late switching if
	__builtin_{apply,return} emitted a load that require mode,
	other than MODE_EXIT.

2012-11-05  Richard Sandiford  <rdsandiford@googlemail.com>

	PR target/55204
	* config/i386/i386.c (ix86_address_subreg_operand): Remove stack
	pointer check.
	(print_reg): Use true_regnum rather than REGNO.
	(ix86_print_operand_address): Remove SUBREG handling.

2012-11-05  Jan Hubicka  <jh@suse.cz>

	* tree-ssa-loop-niter.c (finite_loop_p): Revamp to be just wrapper of
	max_loop_iterations.

2012-11-05  Joern Rennecke  <joern.rennecke@embecosm.com>

	* reorg.c (fill_simple_delay_slots): Avoid calling optimize_skip
	with a return instruction.

2012-11-05  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/55151
	* lra-constraints.c (process_alt_operands): Permit putting reg
	value into memory.  Increase reject for this case.

2012-11-05  Dehao Chen  <dehao@google.com>

	* final.c (reemit_insn_block_notes): Do not change scope if insn
	location is UNKNOWN_LOCATION.

2012-11-05  Joern Rennecke  <joern.rennecke@embecosm.com>

	* doc/md.texi (Defining Attributes): Document that we are defining
	HAVE_ATTR_name macors as 1 for defined attributes, and as 0
	for undefined special attributes.
	* final.c (asm_insn_count, align_fuzz): Always define.
	(insn_current_reference_address): Likewise.
	(init_insn_lengths): Use if (HAVE_ATTR_length) instead of
	#ifdef HAVE_ATTR_length.
	(get_attr_length_1, shorten_branches, final): Likewise.
	(final_scan_insn, output_asm_name): Likewise.
	* genattr.c (gen_attr): Define HAVE_ATTR_name macros for
	defined attributes as 1.
	Remove ancient get_attr_alternative compatibility code.
	For special purpose attributes not provided, define HAVE_ATTR_name
	as 0.
	In case no length attribute is given, provide stub definitions
	for insn_*_length* functions, and also include insn-addr.h.